# nn-library

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
analysis/: plot_similarity_results.py  plot_stitching_results.py
configs/: local_config.yaml.template  stitch_chai.yaml  train_cifar10_resnet.yaml
configs/data/: cifar10.yaml  cifar100.yaml  imagenet.yaml
configs/local/: env.yaml.template  trainer.yaml.template
configs/model/: cifar100_resnet.yaml  cifar10_resnet.yaml  stitch_cifar10_resnets.yaml
configs/trainer/: classification.yaml  stitch.yaml
demos/: demo_ntk_learnability.py  demo_nuclear_norm_utils.py  demo_sae.py  demo_stitching.py
scripts/: model_info.py  repsim_imagenet.sh  similarity.py  stitch.py  stitch_cifar10_resnets.sh  stitch_imagenet.sh  stitch_specific_layers_imagenet.sh  train.py  train_cifar100_resnets.sh  train_cifar10_resnets.sh  utils.py
src/: stitch.py  train.py
src/nn_lib/: env.py  trainer.py  utils.py
src/nn_lib/analysis/: ntk.py  pca.py  stitching.py
src/nn_lib/analysis/ntk/: __init__.py  learnability.py  linearize.py
src/nn_lib/analysis/similarity/: cka.py  (+4 more)
src/nn_lib/datasets/: __init__.py  base.py  cifar.py  coco_semantic_segmentation.py  imagenet.py  mnist.py  vanhateren.py
src/nn_lib/models/: __init__.py  cifar_resnet.py  fancy_layers.py  graph.py  graph_module.py  graph_module_plus.py  graph_utils.py  lit_classifier.py  resnet.py  sparse_auto_encoder.py  utils.py
src/nn_lib/utils/: __init__.py  cli.py  generic.py  linalg.py  mlflow.py  profile.py  stats.py
tests/: test_cka.py  test_datasets.py  test_fancy_layers.py  test_graph_module_plus.py  test_hsic_estimators.py  test_linalg_utils.py  test_ntk.py  test_ntk_linearization.py  test_pca.py  test_regression.py  test_shape_distance.py  test_similarity_utils.py  test_stats.py
