[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "bonsai-nn-library"
description = "Common PyTorch utilities for research projects on neural networks."
readme = "README.md"
requires-python = ">= 3.10"
version = "0.5.4"
license = { text = "MIT" }
authors = [
    { name = "Richard Lange", email = "opensource@bonsai-neuro-ai.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonargparse",
    "matplotlib",
    "mlflow",
    "numpy < 2",
    "pandas",
    "parse",
    "pycocotools",
    "pydot",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tabulate",
    "torch[opt-einsum]",
    "torchmetrics",
    "torchvision",
    "tqdm",
]


[project.urls]
Repository = "https://github.com/bonsai-neuro-ai/nn-library"



[tool.black]
line-length = 100
